force-app/main/default/objects/Order/fields/Install_Notes_4__c.field-meta.xml
<CustomField>
    <fullName>Install_Notes_4__c</fullName>
    <label>Install Notes 4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>