force-app/main/default/objects/Order/fields/Install_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Notes__c</fullName>
    <label>Install Notes</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>