force-app/main/default/objects/Order/fields/Install_Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Install_Start_Date_2__c</fullName>
    <label>Install Start Date 2</label>
    <type>Date</type>
</CustomField>