force-app/main/default/objects/Order/fields/Install_Start_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Install_Start_Date_3__c</fullName>
    <label>Install Start Date 3</label>
    <type>Date</type>
</CustomField>