force-app/main/default/objects/Order/fields/Install_Start_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Install_Start_Date_4__c</fullName>
    <label>Install Start Date 4</label>
    <type>Date</type>
</CustomField>