force-app/main/default/objects/Order/fields/Installer_3__c.field-meta.xml
<CustomField>
    <fullName>Installer_3__c</fullName>
    <label>Installer 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor Flair</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>G1 Constructions</fullName>
            </value>
            <value>
                <fullName>SA Concrete Solutions</fullName>
            </value>
            <value>
                <fullName>RCG Electrical</fullName>
            </value>
            <value>
                <fullName>Platinum Concrete</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>