force-app/main/default/objects/Order/fields/Is_14th_Day_Of_FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_14th_Day_Of_FollowUp_Date__c</fullName>
    <description>This field will return true at the 14th day of Follow-Up date</description>
    <formula>Follow_Up_Date__c = TODAY() - 14</formula>
    <inlineHelpText>This field will return true at the 14th day of Follow-Up date</inlineHelpText>
    <label>Is 14th Day Of FollowUp Date</label>
    <type>Checkbox</type>
</CustomField>