force-app/main/default/objects/Order/fields/Is_7_Days_After_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_7_Days_After_Delivery_Date__c</fullName>
    <description>This field will return true at the 7th Day of Delivery Date on Transport/Delivery sections</description>
    <formula>OR(
  Delivery_Date__c = TODAY() - 7,
  Delivery_Date_2__c = TODAY() - 7,
  Delivery_Date_3__c = TODAY() - 7,
  Delivery_Date_4__c = TODAY() - 7,
  Delivery_Date_5__c = TODAY() - 7,
  Delivery_Date_6__c = TODAY() - 7,
  Delivery_Date_7__c = TODAY() - 7,
  Delivery_Date_8__c = TODAY() - 7,
  Delivery_Date_9__c = TODAY() - 7,
  Delivery_Date_10__c = TODAY() - 7
)</formula>
    <inlineHelpText>This field will return true at the 7th Day of Delivery Date on Transport/Delivery sections</inlineHelpText>
    <label>Is 7 Days After Delivery Date</label>
    <type>Checkbox</type>
</CustomField>