force-app/main/default/objects/Order/fields/Is_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Holder</label>
    <type>Checkbox</type>
</CustomField>