force-app/main/default/objects/Order/fields/Line_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Line_Description_1__c</fullName>
    <label>Line Description 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>