force-app/main/default/objects/Order/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer</label>
    <type>Checkbox</type>
</CustomField>