force-app/main/default/objects/Order/fields/New_File_Needed__c.field-meta.xml
<CustomField>
    <fullName>New_File_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New File Needed</label>
    <type>Checkbox</type>
</CustomField>