force-app/main/default/objects/Order/fields/On_Hold_Notes__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>On Hold Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>