force-app/main/default/objects/Order/fields/Order_Confirmation_Sent_NEW__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Sent_NEW__c</fullName>
    <description>Created by BDD</description>
    <formula>Parent_Quote__r.Order_Confirmation_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Entered against the Quote</inlineHelpText>
    <label>Order Confirmation Sent</label>
    <type>Date</type>
</CustomField>