force-app/main/default/objects/Order/fields/Order_Confirmation_Upload_Copy__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Upload_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>Order Confirmation Upload Copy?</label>
    <type>Checkbox</type>
</CustomField>