force-app/main/default/objects/Order/fields/Other_Supplier_10__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplier_10__c</fullName>
    <label>Other Supplier 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>