force-app/main/default/objects/Order/fields/Other_Supplier_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplier_2__c</fullName>
    <description>Created by BDD</description>
    <label>Other Supplier 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>