force-app/main/default/objects/Order/fields/Other_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplier__c</fullName>
    <label>Other Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>