force-app/main/default/objects/Order/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>