force-app/main/default/objects/Order/fields/Payment_Terms_NEW__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_NEW__c</fullName>
    <description>Created by BDD</description>
    <formula>Parent_Quote__r.Payment_Terms__c</formula>
    <inlineHelpText>Entered against the Quote</inlineHelpText>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>