force-app/main/default/objects/Order/fields/Pick_Up_Date_From_Supplier_10__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date_From_Supplier_10__c</fullName>
    <label>Pick Up Date From Supplier 10</label>
    <type>Date</type>
</CustomField>