force-app/main/default/objects/Order/fields/Pick_Up_Date_From_Supplier_3__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date_From_Supplier_3__c</fullName>
    <description>Created by BDD</description>
    <label>Pick Up Date From Supplier 3</label>
    <type>Date</type>
</CustomField>