force-app/main/default/objects/Order/fields/Purchase_Order_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Date_Issued__c</fullName>
    <label>Purchase Order Date Issued</label>
    <type>Date</type>
</CustomField>