force-app/main/default/objects/Order/fields/Purchase_Order_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Date_Sent__c</fullName>
    <label>Purchase Order Date Sent</label>
    <type>Date</type>
</CustomField>