force-app/main/default/objects/Order/fields/Purchase_Order_To_Supplier_Notes3__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_To_Supplier_Notes3__c</fullName>
    <label>Purchase Order To Supplier Notes3</label>
    <type>TextArea</type>
</CustomField>