force-app/main/default/objects/Order/fields/QA_Approved__c.field-meta.xml
<CustomField>
    <fullName>QA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>QA Approved</label>
    <type>Checkbox</type>
</CustomField>