force-app/main/default/objects/Order/fields/QA_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Date__c</fullName>
    <label>QA Date</label>
    <type>Date</type>
</CustomField>