force-app/main/default/objects/Order/fields/QA_Issue__c.field-meta.xml
<CustomField>
    <fullName>QA_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>QA Issue</label>
    <type>Checkbox</type>
</CustomField>