force-app/main/default/objects/Order/fields/QA_Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Issue_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>QA Issue Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>