force-app/main/default/objects/Order/fields/QA_Photos_Taken__c.field-meta.xml
<CustomField>
    <fullName>QA_Photos_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>QA Photos Taken</label>
    <type>Checkbox</type>
</CustomField>