force-app/main/default/objects/Order/fields/QA_Rep__c.field-meta.xml
<CustomField>
    <fullName>QA_Rep__c</fullName>
    <label>QA Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JS</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>SRS</fullName>
            </value>
            <value>
                <fullName>JG</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TG QA Staff</fullName>
                <isActive>false</isActive>
                <label>TG QA Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>