force-app/main/default/objects/Order/fields/QA_Rep_Other__c.field-meta.xml
<CustomField>
    <fullName>QA_Rep_Other__c</fullName>
    <description>Created by BDD</description>
    <label>QA Rep Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>