force-app/main/default/objects/Order/fields/Quote_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date_Issued__c</fullName>
    <description>Created by BDD</description>
    <formula>Parent_Quote__r.Date_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Date Issued</label>
    <type>Date</type>
</CustomField>