force-app/main/default/objects/Order/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>Parent_Quote__r.QuoteNumber</formula>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>