force-app/main/default/objects/Order/fields/Reception_Quality_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reception_Quality_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reception &amp; Quality Approved</label>
    <type>Checkbox</type>
</CustomField>