force-app/main/default/objects/Order/fields/Reception_Quality_Date__c.field-meta.xml
<CustomField>
    <fullName>Reception_Quality_Date__c</fullName>
    <label>Reception &amp; Quality Date</label>
    <type>Date</type>
</CustomField>