force-app/main/default/objects/Order/fields/Reception_Quality_Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Reception_Quality_Inspected_By__c</fullName>
    <label>Reception &amp; Quality Inspected By</label>
    <type>TextArea</type>
</CustomField>