force-app/main/default/objects/Order/fields/Reception_Quality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reception_Quality_Notes__c</fullName>
    <label>Reception &amp; Quality Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>