force-app/main/default/objects/Order/fields/Show_TransDelivCustomer10__c.field-meta.xml
<CustomField>
    <fullName>Show_TransDelivCustomer10__c</fullName>
    <formula>OR(
NOT(ISBLANK(TEXT(Carrier_To_Customer_9__c))),
NOT(ISBLANK(Transportation_Document_Number_9__c)),
NOT(ISBLANK(Transport_Delivery_to_Customer_Notes_9__c)),
NOT(ISBLANK(Carrier_To_Customer_9_Other__c)),
NOT(ISBLANK(Transportation_Date_9__c)),
NOT(ISBLANK(Delivery_Date_9__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show_TransDelivCustomer10</label>
    <type>Checkbox</type>
</CustomField>