force-app/main/default/objects/Order/fields/Show_TransDelivCustomer2__c.field-meta.xml
<CustomField>
    <fullName>Show_TransDelivCustomer2__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Carrier_To_Customer__c))),
  NOT(ISBLANK(Transport_Document_Number__c)),
  NOT(ISBLANK(Transport_Delivery_to_Customer_Notes__c)),
  NOT(ISBLANK(Carrier_To_Customer_Other__c)),
  NOT(ISBLANK(Transport_Date__c)),
  NOT(ISBLANK(Delivery_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show_TransDelivCustomer2</label>
    <type>Checkbox</type>
</CustomField>