force-app/main/default/objects/Order/fields/Show_TransDelivCustomer3__c.field-meta.xml
<CustomField>
    <fullName>Show_TransDelivCustomer3__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Carrier_To_Customer_2__c))),
  NOT(ISBLANK(Transportation_Document_Number_2__c)),
  NOT(ISBLANK(Transport_Delivery_to_Customer_Notes_2__c)),
  NOT(ISBLANK(Carrier_To_Customer_2_Other__c)),
  NOT(ISBLANK(Transportation_Date_2__c)),
  NOT(ISBLANK(Delivery_Date_2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show_TransDelivCustomer3</label>
    <type>Checkbox</type>
</CustomField>