force-app/main/default/objects/Order/fields/ShowClaim10__c.field-meta.xml
<CustomField>
    <fullName>ShowClaim10__c</fullName>
    <formula>OR(
  Claim_9_Amount__c &gt; 0,
  NOT(ISBLANK(Claim_9_Invoice_Number__c)),
  NOT(ISBLANK(Claim_9_Date__c)),
  NOT(ISBLANK(Claim_9_Invoice_Date_Paid__c)),
  Claim_9_Updated_System__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowClaim10</label>
    <type>Checkbox</type>
</CustomField>