force-app/main/default/objects/Order/fields/ShowClaim2__c.field-meta.xml
<CustomField>
    <fullName>ShowClaim2__c</fullName>
    <formula>OR(
  Claim_1_Amount__c &gt; 0,
  NOT(ISBLANK(Claim_1_Invoice_Number__c)),
  NOT(ISBLANK(Claim_1_Date__c)),
  NOT(ISBLANK(Claim_1_Invoice_Date_Paid__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowClaim2</label>
    <type>Checkbox</type>
</CustomField>