force-app/main/default/objects/Order/fields/ShowClaim3__c.field-meta.xml
<CustomField>
    <fullName>ShowClaim3__c</fullName>
    <formula>OR(
  Claim_2_Amount__c &gt; 0,
  NOT(ISBLANK(Claim_2_Invoice_Number__c)),
  NOT(ISBLANK(Claim_2_Date__c)),
  NOT(ISBLANK(Claim_2_Invoice_Date_Paid__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowClaim3</label>
    <type>Checkbox</type>
</CustomField>