force-app/main/default/objects/Order/fields/ShowInstaller2__c.field-meta.xml
<CustomField>
    <fullName>ShowInstaller2__c</fullName>
    <formula>OR(
    NOT(ISBLANK(TEXT(Installer__c))),       
    NOT(ISBLANK(Install_Start_Date__c)),    
    NOT(ISBLANK(Install_Completed_Date__c))
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowInstaller2</label>
    <type>Checkbox</type>
</CustomField>