force-app/main/default/objects/Order/fields/ShowInstaller3__c.field-meta.xml
<CustomField>
    <fullName>ShowInstaller3__c</fullName>
    <formula>OR(
    NOT(ISBLANK(TEXT(Installer_2__c))),       
    NOT(ISBLANK(Install_Start_Date_2__c)),    
    NOT(ISBLANK(Install_Completed_Date_2__c))
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowInstaller3</label>
    <type>Checkbox</type>
</CustomField>