force-app/main/default/objects/Order/fields/ShowInstaller4__c.field-meta.xml
<CustomField>
    <fullName>ShowInstaller4__c</fullName>
    <formula>OR(
    NOT(ISBLANK(TEXT(Installer_3__c))),       
    NOT(ISBLANK(Install_Start_Date_3__c)),    
    NOT(ISBLANK(Install_Completed_Date_3__c))
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowInstaller4</label>
    <type>Checkbox</type>
</CustomField>