force-app/main/default/objects/Order/fields/ShowPurOrderSupp3__c.field-meta.xml
<CustomField>
    <fullName>ShowPurOrderSupp3__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Supplier_2__c))),
  NOT(ISBLANK(TG_Purchase_Order_Number_2__c)),
  NOT(ISBLANK(Supplier_Order_Number_SO_Numb_2__c)),
  NOT(ISBLANK(Supplier_Approx_Ready_Date_2__c)),
  NOT(ISBLANK(Purchase_Order_To_Supplier_Notes2__c)),
  NOT(ISBLANK(Other_Supplier_2__c)),
  NOT(ISBLANK(Supplier_PO_Date_Sent_2__c)),
  NOT(ISBLANK(TEXT(Drawings_if_required_2__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowPurOrderSupp3</label>
    <type>Checkbox</type>
</CustomField>