force-app/main/default/objects/Order/fields/ShowSuppTransColl10__c.field-meta.xml
<CustomField>
    <fullName>ShowSuppTransColl10__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Freight_Company_9__c))),
  NOT(ISBLANK(Supplier_Transport_Purchase_Order_Num_9__c)),
  NOT(ISBLANK(Connote_Number_9__c)),
  NOT(ISBLANK(Freight_Company_Other_9__c)),
  NOT(ISBLANK(Pick_Up_Date_From_Supplier_9__c)),
  NOT(ISBLANK(Date_Of_Arrival_From_Supplier_9__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowSuppTransColl10</label>
    <type>Checkbox</type>
</CustomField>