force-app/main/default/objects/Order/fields/ShowSuppTransColl2__c.field-meta.xml
<CustomField>
    <fullName>ShowSuppTransColl2__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Freight_Company__c))),
  NOT(ISBLANK(Supplier_Transport_Purchase_Order_Number__c)),
  NOT(ISBLANK(Connote_Number__c)),
  NOT(ISBLANK(Freight_Company_Other__c)),
  NOT(ISBLANK(Pick_Up_Date_From_Supplier__c)),
  NOT(ISBLANK(Date_Of_Arrival_From_Supplier__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowSuppTransColl2</label>
    <type>Checkbox</type>
</CustomField>