force-app/main/default/objects/Order/fields/ShowSuppTransColl3__c.field-meta.xml
<CustomField>
    <fullName>ShowSuppTransColl3__c</fullName>
    <formula>OR(
  NOT(ISBLANK(TEXT(Freight_Company_2__c))),
  NOT(ISBLANK(Supplier_Transport_Purchase_Order_Num_2__c)),
  NOT(ISBLANK(Connote_Number_2__c)),
  NOT(ISBLANK(Freight_Company_Other_2__c)),
  NOT(ISBLANK(Pick_Up_Date_From_Supplier_2__c)),
  NOT(ISBLANK(Date_Of_Arrival_From_Supplier_2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowSuppTransColl3</label>
    <type>Checkbox</type>
</CustomField>