force-app/main/default/objects/Order/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <inlineHelpText>Style, colour, quantity, size, etc</inlineHelpText>
    <label>Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>