force-app/main/default/objects/Order/fields/Supplier_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_10__c</fullName>
    <label>Supplier 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gossi Park</fullName>
            </value>
            <value>
                <fullName>Britex</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>Italian Lab</fullName>
            </value>
            <value>
                <fullName>3Monkeez</fullName>
            </value>
            <value>
                <fullName>ProClean</fullName>
            </value>
            <value>
                <fullName>Rainware</fullName>
            </value>
            <value>
                <fullName>CORA</fullName>
            </value>
            <value>
                <fullName>Precinct</fullName>
            </value>
            <value>
                <fullName>Moduplay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Green Plate</fullName>
                <isActive>false</isActive>
                <label>Green Plate</label>
            </value>
            <value>
                <fullName>Modus</fullName>
                <isActive>false</isActive>
                <label>Modus</label>
            </value>
            <value>
                <fullName>Plasteel</fullName>
                <isActive>false</isActive>
                <label>Plasteel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>