force-app/main/default/objects/Order/fields/Supplier_3__c.field-meta.xml
<CustomField>
    <fullName>Supplier_3__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier</valueSetName>
    </valueSet>
</CustomField>