force-app/main/default/objects/Order/fields/Supplier_Approx_Ready_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Approx_Ready_Date_10__c</fullName>
    <label>Supplier Approx. Ready Date 10</label>
    <type>Date</type>
</CustomField>