force-app/main/default/objects/Order/fields/Supplier_Approx_Ready_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Approx_Ready_Date_3__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier Approx. Ready Date 3</label>
    <type>Date</type>
</CustomField>