force-app/main/default/objects/Order/fields/Supplier_Confirmation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Confirmation_Due_Date__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier Confirmation Due Date</label>
    <type>Date</type>
</CustomField>