force-app/main/default/objects/Order/fields/Supplier_Confirmation_Uploaded_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Confirmation_Uploaded_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Confirmation Uploaded 10</label>
    <type>Checkbox</type>
</CustomField>