force-app/main/default/objects/Order/fields/Supplier_Confirmation_Uploaded_2__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Confirmation_Uploaded_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>Supplier Confirmation Uploaded 2</label>
    <type>Checkbox</type>
</CustomField>