force-app/main/default/objects/Order/fields/Supplier_Order_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order_Acknowledgement__c</fullName>
    <description>Created by BDD</description>
    <inlineHelpText>Enter Date Supplier Acknowledgement received</inlineHelpText>
    <label>Supplier Order Acknowledgement</label>
    <type>Date</type>
</CustomField>