force-app/main/default/objects/Order/fields/Supplier_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order_Number__c</fullName>
    <inlineHelpText>Terrain Group&apos;s Purchase Order Number or Sales Order Number</inlineHelpText>
    <label>Supplier Order Number / SO Numb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>