force-app/main/default/objects/Order/fields/Supplier_Order_Number_SO_Numb_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order_Number_SO_Numb_10__c</fullName>
    <label>Supplier Order Number / SO Numb 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>