force-app/main/default/objects/Order/fields/Supplier_Order_Number_SO_Numb_3__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order_Number_SO_Numb_3__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier Order Number / SO Numb 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>