force-app/main/default/objects/Order/fields/Supplier_PO_Date_Sent_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_PO_Date_Sent_10__c</fullName>
    <label>Supplier PO Date Sent 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>